<resources>
    <string name="app_name">Pocket map</string>

    <!--Map screen-->
    <string name="add_placemark_button">Add placemark button</string>
    <string name="central_pointer">Central pointer</string>
    <string name="save_location">Сохранить координаты</string>
    <string name="answer_yes">Да</string>
    <string name="answer_no">Нет</string>
    <string name="alert_dialog_message_save_new_place">Вы хотите сохранить эти координаты?</string>
    <string name="alert_dialog_title_save">Координаты</string>
    <string name="latitude">Широта</string>
    <string name="longitude">Долгота</string>
    <string name="error_toast">Ошибка при загрузке сохраненных точек</string>
    <string name="place_name_text">Точка %1$d</string>
    <string name="snackbar_message_latitude_text">Значение широты должно быть от -90 до 90</string>
    <string name="snackbar_message_longitude_text">Значение долготы должно быть от -180 до 180</string>
    <string name="snack_bar_action_text">ПОВТОРИТЬ</string>


   <!-- Places screen-->
    <string name="place_location_text">%1$s° %2$s° </string>
    <string name="error_image">Error image</string>
    <string name="something_went_wrong">Что-то пошло не так</string>
    <string name="no_content_image">No content image</string>
    <string name="no_content_message">Вы еще не сохранили ни одной точки. Добавить новую точку можно на карте</string>
    <string name="list_of_places">Список точек</string>
    <string name="saved_spots">Saved spots</string>
    <string name="delete_all_spots">Удалить все точки</string>
    <string name="map">Карта</string>
    <string name="the_map">Карта</string>
    <string name="alert_dialog_message_delete_all">Вы действительно хотите удалить все точки?</string>
    <string name="alert_dialog_title_delete">Внимание</string>


</resources>