<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"

    tools:context=".presentation.places.ui.PlacesFragment">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            style="@style/Widget.Material3.AppBarLayout"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@color/black_variant1"
            app:liftOnScroll="true">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/top_app_bar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:navigationIcon="@drawable/ic_arrow_back"
                app:layout_scrollEffect="compress"
                app:layout_scrollFlags="scroll|enterAlways|snap"
                app:menu="@menu/top_bar_menu"
                app:title="@string/saved_spots"
                app:titleTextAppearance="@style/TopBarTitle"
                app:titleTextColor="@color/white" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/places_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/place_layout_padding"
            android:layout_marginTop="@dimen/place_layout_padding"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            tools:itemCount="5"
            tools:listitem="@layout/place_item" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/error_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="12dp"
            android:contentDescription="@string/error_image"
            android:src="@drawable/ic_error" />

        <TextView
            style="@style/ScreenMessagesText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/something_went_wrong" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/no_content_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="12dp"
            android:contentDescription="@string/no_content_image"
            android:src="@drawable/ic_no_content" />

        <TextView
            style="@style/ScreenMessagesText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_content_message" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>